   operators, user-defined subroutines and `return`, and tail calls
** `Emit.PIR` can compile `ext/Test/lib/Test.pm` and passes almost all sanity
   tests
* `eval` and related builtins are now implemented in the Prelude
* Initial support for `%*INC`

=== Bundled Modules

* New module ports:
** `Module::Pluggable::Fast`
** `HTTP::Server::Simple`
** `Perldoc` (partial port)

=== Test, Examples and Documentations

* Many new tests and several refactorings based on p6l rulings, we now have
  7500+ tests
* New `examples/continuation` and `examples/unitfunctions` directories added
  and populated
* Examples of methods acting on builtin-types in `examples/vmethods/`
* Low level sanity tests in `t/01-sanity/` for the PIR code emitter
* More JAPHs added to `examples/japhs/`
* Updates and cleanups to `docs/01Overview.html`
* Interpreter and debugger for l33t in `examples/obfu/l33t.p6`
* Perl 6 Rule grammar and related files added to `module/Grammars/`

=== Bug Fixes

* `(42).kv` will now die and `(42,).kv` will work
* `sleep()` now returns seconds slept
* Fixed `!~` to mean `not(... ~~ ...)`, instead of `ne`
* `eval("...", :lang<...>")` works now
* Call parrot without `-j` (JIT), as Parrot doesn't support JIT on all
  systems. You can use the new environment veriable `PUGS_PARROT_OPTS` to
  switch JIT on again
* Fixed order of method invocation in `BUILDALL` and `DESTROYALL`

== Changes for 6.2.7 (r4612) - June 13, 2005

=== Pugs Internals

* Add `::?CLASS`, `::?ROLE`, and `::?PACKAGE` magicals
* Allow bypassing the Standard Prelude by setting `$ENV<PUGS_BYPASS_PRELUDE>`
* Experimental heredoc support via `qq:to/END/ ... END`
* Implement `is required` for subroutine parameters
* New builtins: `caller`, `Carp::longmess`, `Scalar::as`
* Obsolete the old `open` builtin in favor of Prelude's `File::open()`
* Rudimentary, source-filter-like macro support added
* Speed up parsing by 100% by caching dynamic grammar rules
* Support for lvalue `substr()`